[package]
name = "b"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
tokio = { version = "1", features = ["full", "macros"] }
bytes = "1"
tokio-util = { version = "0.7.11", features = ["codec"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
futures = "0.3.30"
